--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/compiler-sfc": "^3.0.0",
     "vite": "^2.4.4",
     "vue-tsc": "^0.2.2"
   }
