--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
   },
   "eslint.packageManager": "yarn",
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "files.eol": "\n"
 }
