--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "1.0.2-beta.65",
     "less": "^4.1.1",
     "vue": "^3.0.5",
     "vue-router": "4"
