--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "element-plus": "1.0.2-beta.65",
+    "font-awesome": "4.7.0",
     "less": "^4.1.1",
     "vue": "^3.0.5",
     "vue-router": "4"
