--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "element-plus": "1.0.2-beta.65",
     "font-awesome": "4.7.0",
     "less": "^4.1.1",
