--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "axios": "0.21.1",
@@ -15,9 +17,17 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/vue3": "^6.3.6",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "babel-loader": "^8.2.2",
+    "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vue-loader": "^16.4.1",
     "vue-tsc": "^0.2.2"
   }
 }
