--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@vueuse/core": "5.2.0",
     "axios": "0.21.1",
     "element-plus": "1.0.2-beta.65",
-    "font-awesome": "4.7.0",
     "less": "^4.1.1",
     "vue": "^3.0.5",
     "vue-router": "4"
@@ -25,6 +26,7 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-loader": "^8.2.2",
+    "less-loader": "7.3.0",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vue-loader": "^16.4.1",
