--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "0.21.1",
     "element-plus": "1.0.2-beta.65",
     "less": "^4.1.1",
+    "mediasoup-client": "3.6.36",
+    "socket.io-client": "4.1.3",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
