--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "mysql2": "^2.1.0",
     "omit.js": "^2.0.2",
     "sequelize": "^6.3.5",
-    "socket.io": "^3.1.1"
+    "socket.io": "4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
