--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "0.21.1",
     "element-plus": "1.0.2-beta.65",
     "less": "^4.1.1",
+    "lorem-ipsum": "2.0.3",
     "mediasoup-client": "3.6.36",
     "socket.io-client": "4.1.3",
     "vue": "^3.0.5",
