--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "watch": "vite build --watch",
     "serve": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -14,6 +15,7 @@
     "axios": "0.21.1",
     "element-plus": "1.0.2-beta.65",
     "less": "^4.1.1",
+    "lorem-ipsum": "2.0.3",
     "mediasoup-client": "3.6.36",
     "socket.io-client": "4.1.3",
     "vue": "^3.0.5",
