--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,7 @@
     "mediasoup-client": "3.6.36",
     "socket.io-client": "4.1.3",
     "vue": "^3.0.5",
-    "vue-router": "4"
-  },
-  "devDependencies": {
+    "vue-router": "4",
     "@babel/core": "^7.14.8",
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-essentials": "^6.3.6",
