--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "bd7-backend",
+  "name": "world-meeting-backend",
   "version": "1.0.0",
-  "description": "BD7",
-  "author": "techtrainingcamp-frontend-7",
+  "description": "World Meeting Web App implemented using WebRTC",
   "private": false,
-  "main": "/bin/www.js",
+  "main": "/build/bin/www.js",
   "scripts": {
     "start": "node --inspect -r ts-node/register -r tsconfig-paths/register src/bin/www.ts",
     "dev": "cross-env NODE_ENV=development nodemon -e ts,json,js --exec \"yarn start\"",
-    "serve": "cross-env NODE_ENV=production nodemon -e ts,json,js --exec \"yarn start\""
+    "serve": "cross-env NODE_ENV=production nodemon -e ts,json,js --exec \"yarn start\"",
+    "build": "ttsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/techtrainingcamp-frontend-7/BD7.git"
+    "url": "git+https://github.com/upupming/world-meeting"
   },
   "keywords": [],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/techtrainingcamp-frontend-7/BD7/issues"
+    "url": "https://github.com/upupming/world-meeting/issues"
   },
-  "homepage": "https://github.com/techtrainingcamp-frontend-7/BD7#readme",
+  "homepage": "https://github.com/upupming/world-meeting#readme",
   "dependencies": {
     "async-wrapper-express-ts": "^3.1.1",
     "axios": "^0.21.0",
@@ -28,14 +28,11 @@
     "express-jwt": "^6.0.0",
     "express-sequelize-crud": "^6.1.5",
     "jsonwebtoken": "^8.5.1",
-    "mediasoup": "3.8.0",
     "moment": "^2.29.0",
     "mysql2": "^2.1.0",
     "omit.js": "^2.0.2",
     "sequelize": "^6.3.5",
-    "socket.io": "4.1.3"
-  },
-  "devDependencies": {
+    "socket.io": "4.1.3",
     "@types/express": "^4.17.11",
     "@types/express-jwt": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.0",
