--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite-ts-router",
-  "version": "0.0.0",
+  "name": "world-meeting-frontend",
+  "version": "1.0.0",
+  "description": "World Meeting Web App implemented using WebRTC",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -16,12 +17,9 @@
     "element-plus": "1.0.2-beta.65",
     "less": "^4.1.1",
     "lorem-ipsum": "2.0.3",
-    "mediasoup-client": "3.6.36",
     "socket.io-client": "4.1.3",
     "vue": "^3.0.5",
-    "vue-router": "4"
-  },
-  "devDependencies": {
+    "vue-router": "4",
     "@babel/core": "^7.14.8",
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-essentials": "^6.3.6",
