--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "webrtc-project",
+  "name": "world-meeting",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "<yimingli.cs@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build:frontend": "cd frontend && yarn && yarn build",
+    "build:backend": "cd backend && yarn && yarn build",
+    "postinstall": "yarn build:frontend && yarn build:backend",
+    "start": "cd backend && yarn start"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
@@ -15,5 +19,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.3.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
